--- a/access_global_local.Rmd
+++ b/access_global_local.Rmd
@@ -497,28 +497,28 @@ writeRaster(leastcost_motor_pop,
 ```
 
 
-Reclassify 'leastcost_motor' to chosen time-boundary categorical zones.
+Reclassify 'leastcost_motor' raster to chosen time-boundary categorical zones.
 ```{r reclassify}
 
-## Create rasterlayer from 'lcm_df' dataframe
+## Create new raster from 'lcm_df' dataframe
 # 'rasterfromXYZ' function works only with three columns, so remove 'layer' column from 'lcm_df'
 lcm_df$layer = NULL
 # Check
 # View(lcm_df)
 
-# Create reaster from 'lcm_df' dataframe
+# Create new raster from 'lcm_df' dataframe
 lcm_raster <- rasterFromXYZ(lcm_df)
 # Check
 # plot(lcm_raster)
 
-## Create matrix of time-boundary categories (to resample 'lcm_raster')
+## Create matrix of time-boundary categories of interest (to resample 'lcm_raster')
 ## Categories: 
-# * 0 - 30 minutes
+# * < 30 minutes
 # * 30 minutes - 1 hour
 # * 1 hour - 3 hours
 # * 3 hours - 6 hours
 # * 6 hours - 12 hours
-# * 12+ hours
+# * > 12 hours
 rcl_matrix <- c(0, 30, 1, # 30 minutes
                 30, 60, 2, # 1 hour
                 60, 180, 3, # 3 hours
@@ -539,16 +539,9 @@ lcm_pop_data_rcl
 # CRS not assigned
 
 ## Assign CRS to that of 'leastcost_motor' (WGS84)
-crs(leastcost_motor)
-# +proj=longlat +datum=WGS84 +no_defs 
-lcm_crs <- crs(leastcost_motor)
+projection(lcm_pop_data_rcl) <- crs(leastcost_motor)
 # Check
-# lcm_crs
-
-# Assign CRS
-projection(lcm_pop_data_rcl) <- lcm_crs
-# Check
-lcm_pop_data_rcl
+crs(lcm_pop_data_rcl)
 # CRS set (WGS84)
 
 # Check
@@ -561,10 +554,11 @@ lcm_rcl_pop_data_df <- as.data.frame(lcm_pop_data_rcl, xy = TRUE)
 ```
 
 
-Determine population within each time-boundary category. Summate the data to give total number of individuals within chosen time-boundary categorical zones and calculate % of total population within chosen time-boundary categorical zones.
+Determine population within each time-boundary zone. Summate the data to give total number of individuals within chosen time-boundary categorical zones and calculate % of total population within chosen time-boundary categorical zones.
+*Create for-loops?*
 ```{r determine_population_within_time-boundary_zones}
 
-# Determine population totals (within 'pop_data' raster), within time_boundary categorical zones (within 'lcm_pop_data_rcl') using 'zonal' function 
+# Determine population (within 'pop_data' raster), within time-boundary  zones (within 'lcm_pop_data_rcl') using 'zonal' function 
 lcm_rcl_zone <- zonal(pop_data, lcm_pop_data_rcl, fun = sum)
 
 # Create dataframe
@@ -585,9 +579,9 @@ lcm_rcl_zone_df$Zone <- c("< 30 minutes",
                           "1 hour - 3 hours",
                           "3 hours - 6 hours",
                           "6 hours - 12 hours",
-                          "12+ hours")
+                          "> 12 hours")
 
-# Add total population column
+# Add 'Total Population'  column
 lcm_rcl_zone_df$" Total Population" <-
   
   c(sum(lcm_rcl_zone_df$"Zone Population"[1]),
@@ -598,7 +592,7 @@ lcm_rcl_zone_df$" Total Population" <-
     sum(lcm_rcl_zone_df$"Zone Population"[1:6]))
 
 # Add % of total population column
-lcm_rcl_zone_df$"% of Population" <-
+lcm_rcl_zone_df$"% Population" <-
    
   c(sum(lcm_rcl_zone_df$"Zone Population"[1])   / sum(lcm_rcl_zone_df$"Zone Population"[1:6]) * 100,
     sum(lcm_rcl_zone_df$"Zone Population"[1:2]) / sum(lcm_rcl_zone_df$"Zone Population"[1:6]) * 100,
